RESOLVED FIXED 179324
Dynamic media queries don't update in shadow tree stylesheets
https://bugs.webkit.org/show_bug.cgi?id=179324
Summary Dynamic media queries don't update in shadow tree stylesheets
Antti Koivisto
Reported 2017-11-06 10:03:14 PST
This doesn't update when view is resized: <div id=test></div> <script> const shadow = test.attachShadow({mode: 'open'}); shadow.innerHTML = ` <style> @media (min-width:700px) { div { color: green } } </style> <div>foo</div> `; </script>
Attachments
patch (9.49 KB, patch)
2017-11-07 06:43 PST, Antti Koivisto
rniwa: review+
patch (9.48 KB, patch)
2017-11-07 09:37 PST, Antti Koivisto
no flags
Ryosuke Niwa
Comment 1 2017-11-06 10:19:47 PST
Oh no :(
Antti Koivisto
Comment 2 2017-11-07 06:43:10 PST
Ryosuke Niwa
Comment 3 2017-11-07 09:00:18 PST
Comment on attachment 326208 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=326208&action=review > LayoutTests/fast/shadow-dom/media-query-in-shadow-style.html:17 > + }, 50); Can we use 1 or 10?
Antti Koivisto
Comment 4 2017-11-07 09:37:54 PST
WebKit Commit Bot
Comment 5 2017-11-07 10:10:44 PST
Comment on attachment 326215 [details] patch Clearing flags on attachment: 326215 Committed r224535: <https://trac.webkit.org/changeset/224535>
WebKit Commit Bot
Comment 6 2017-11-07 10:10:46 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2017-11-15 12:10:31 PST
Note You need to log in before you can comment on or make changes to this bug.