Dynamic media queries don't update in shadow tree stylesheets https://bugs.webkit.org/show_bug.cgi?id=179324

Reviewed by Ryosuke Niwa.

Source/WebCore:

Viewport and accessibility queries should work dynamically also in shadow trees.

Test: fast/shadow-dom/media-query-in-shadow-style.html

* page/LayoutContext.cpp:
(WebCore::LayoutContext::updateStyleForLayout):
* page/Page.cpp:
(WebCore::Page::accessibilitySettingsDidChange):

    Evaluate media query list (JS API) unconditionally as it is independent from style queries.
    Remove some logging.

* style/StyleScope.cpp:
(WebCore::Style::Scope::evaluateMediaQueriesForViewportChange):
(WebCore::Style::Scope::evaluateMediaQueriesForAccessibilitySettingsChange):

    Factor into functions in style scope.

(WebCore::Style::Scope::evaluateMediaQueries):

    Evaluate queries in all shadow trees too.

* style/StyleScope.h:

LayoutTests:

* fast/shadow-dom/media-query-in-shadow-style-expected.html: Added.
* fast/shadow-dom/media-query-in-shadow-style.html: Added.
* fast/shadow-dom/resources/media-query-in-shadow-style-frame.html: Added.


Canonical link: https://commits.webkit.org/195443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224535 268f45cc-cd09-0410-ab3c-d52691b4dbfc